# nightward

./: .gitignore  .gitleaks.toml  .goreleaser.yml  .nightward.example.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  deny.toml  go.mod  go.sum  plugin.yaml  renovate.json  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  allowed_signers  release.yml
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  feature_request.yml  rule_request.yml
.github/workflows/: ci.yml  nightward-policy.yml  pages.yml  release.yml  scorecard.yml
.trunk/: trunk.yaml
cmd/nightward/: main.go
cmd/nw/: main.go
crates/nightward-cli/: Cargo.toml
crates/nightward-cli/src/: cli.rs  lib.rs  tui.rs
crates/nightward-core/: Cargo.toml
crates/nightward-core/src/: actions.rs  analysis.rs  approvals.rs  backupplan.rs  fixplan.rs  inventory.rs  lib.rs  mcpserver.rs  policy.rs  providers.rs  reportdiff.rs  reporthtml.rs  rules.rs  schedule.rs  snapshot.rs  state.rs  types.rs
crates/nightward-core/tests/: provider_contracts.rs
docs/: action.md  adapters.md  analysis.md  ci-security.md  contributing-fixtures.md  dependency-maintenance.md  distribution.md  growth.md  install.md  mcp-server.md  openssf-best-practices.md  privacy-model.md  raycast-extension.md  release.md  remediation.md  screenshots.md  testing.md  threat-model.md  website.md
docs/demo/: nightward-opentui.tape  nightward-tui.tape
fuzz/: Cargo.toml
fuzz/fuzz_targets/: filesystem_boundaries.rs  mcp_config_formats.rs  redaction_urls_headers.rs
integrations/raycast/: .gitignore  CHANGELOG.md  README.md  eslint.config.cjs  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json  vitest.junit.config.mjs
internal/analysis/: analysis.go  analysis_test.go  providers.go
internal/backupplan/: plan.go  plan_test.go
internal/cli/: cli.go  cli_test.go
internal/fixplan/: plan.go  plan_test.go  preview.go
internal/inventory/: golden_test.go  mcp.go  mcp_fuzz_test.go  mcp_test.go  scanner.go  scanner_test.go  types.go
internal/mcpserver/: server.go  server_test.go
internal/policy/: policy.go  (+1 more)
scripts/: build-opentui-sidecars.mjs  check-dco.sh  check-demo-ids.mjs  check-docs-freshness.mjs  dev-doctor.sh  dev-env.sh  generate-demo-assets.mjs  generate-homebrew-formula.mjs  generate-reference-docs.mjs  generate-tui-media.mjs  install-trunk-ci.sh  release-snapshot-rust.sh  smoke-release-archive.sh  stamp-mcp-registry-version.mjs  test-action-paths.sh  test-dco.sh  test-release-scripts.sh  validate-action-path.sh  validate-release-ref.sh  verify-npm-release.sh  verify-release-archive.sh
site/: index.md  package-lock.json  package.json  roadmap.md
(+96 files in other folders)
