[workspace]
members = [
  "crates/nightward-core",
  "crates/nightward-cli",
]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
authors = ["JSONbored"]
edition = "2021"
homepage = "https://github.com/JSONbored/nightward"
license = "MIT"
repository = "https://github.com/JSONbored/nightward"
rust-version = "1.85"
version = "0.1.5"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.50", features = ["derive"] }
dirs = "6.0.0"
hex = "0.4.3"
html-escape = "0.2.13"
nightward-core = { path = "crates/nightward-core", version = "0.1.5" }
opentui_rust = "0.2.1"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.23.0"
toml = "0.9.8"
wait-timeout = "0.2.1"
which = "8.0.0"
