[package]
name = "nightward-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
hex.workspace = true
html-escape.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
toml.workspace = true
wait-timeout.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true

